; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/drivers/ip/network/extr_transmit.c_IPSendFragment.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/drivers/ip/network/extr_transmit.c_IPSendFragment.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@MAX_TRACE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [40 x i8] c"Called. NdisPacket (0x%X)  NCE (0x%X).\0A\00", align 1
@.str.1 = private unnamed_addr constant [18 x i8] c"NCE->State = %d.\0A\00", align 1
@IPSendComplete = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @IPSendFragment(i32 %0, %struct.TYPE_4__* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @MAX_TRACE, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %10 = bitcast %struct.TYPE_4__* %9 to i8*
  %11 = call i32 @TI_DbgPrint(i32 %7, i8* %10)
  %12 = load i32, i32* @MAX_TRACE, align 4
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = sext i32 %15 to i64
  %17 = inttoptr i64 %16 to i8*
  %18 = call i32 @TI_DbgPrint(i32 %12, i8* %17)
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %20 = load i32, i32* %4, align 4
  %21 = load i32, i32* @IPSendComplete, align 4
  %22 = load i32, i32* %6, align 4
  %23 = call i32 @NBQueuePacket(%struct.TYPE_4__* %19, i32 %20, i32 %21, i32 %22)
  ret i32 %23
}

declare dso_local i32 @TI_DbgPrint(i32, i8*) #1

declare dso_local i32 @NBQueuePacket(%struct.TYPE_4__*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
